src/types/tests/snapshots/tgbot__types__tests__chat__chat_boost_source-2.snap
---
source: src/types/tests/chat.rs
expression: "ChatBoostSource::Giveaway(ChatBoostSourceGiveaway::new(1))"
---
{
  "source": "giveaway",
  "giveaway_message_id": 1
}
