src/types/tests/snapshots/tgbot__types__tests__chat__chat_boost_source-3.snap
---
source: src/types/tests/chat.rs
expression: "ChatBoostSource::Giveaway(ChatBoostSourceGiveaway::new(1).with_is_unclaimed(true))"
---
{
  "source": "giveaway",
  "giveaway_message_id": 1,
  "is_unclaimed": true
}
