src/types/tests/snapshots/tgbot__types__tests__chat__chat_boost_source-5.snap
---
source: src/types/tests/chat.rs
expression: "ChatBoostSource::Premium(User::new(1, \"test\", false))"
---
{
  "source": "premium",
  "user": {
    "first_name": "test",
    "id": 1,
    "is_bot": false
  }
}
