src/types/tests/snapshots/tgbot__types__tests__chat__chat_boost_source.snap
---
source: src/types/tests/chat.rs
expression: "ChatBoostSource::GiftCode(User::new(1, \"test\", false))"
---
{
  "source": "gift_code",
  "user": {
    "first_name": "test",
    "id": 1,
    "is_bot": false
  }
}
