src/types/tests/snapshots/tgbot__types__tests__chat__chat_full_info_channel-2.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "id": 1,
  "type": "channel",
  "accent_color_id": 0,
  "max_reaction_count": 0,
  "available_reactions": [
    {
      "type": "emoji",
      "emoji": "👍"
    },
    {
      "type": "paid"
    },
    {
      "type": "custom_emoji",
      "custom_emoji_id": "5420319826440644296"
    }
  ],
  "background_custom_emoji_id": "emoji-id",
  "has_protected_content": true,
  "message_auto_delete_time": 86400,
  "photo": {
    "big_file_id": "big-file-id",
    "big_file_unique_id": "big-file-unique-id",
    "small_file_id": "small-file-id",
    "small_file_unique_id": "small-file-unique-id"
  },
  "pinned_message": {
    "chat": {
      "type": "channel",
      "id": 1,
      "title": "Channel",
      "username": "channel_username"
    },
    "date": 0,
    "has_protected_content": false,
    "message_id": 1,
    "is_automatic_forward": false,
    "from": {
      "first_name": "User",
      "id": 1,
      "is_bot": false
    },
    "text": "text"
  },
  "profile_accent_color_id": 1,
  "profile_background_custom_emoji_id": "emoji-id",
  "active_usernames": [
    "channel_username"
  ],
  "username": "channel_username",
  "description": "Description",
  "invite_link": "example.com/join/channel",
  "title": "Channel",
  "can_send_paid_media": true,
  "linked_chat_id": 2,
  "emoji_status_custom_emoji_id": "emoji-id",
  "emoji_status_expiration_date": 0,
  "paid_message_star_count": 100,
  "unique_gift_colors": {
    "dark_theme_main_color": 0,
    "dark_theme_other_colors": [
      1
    ],
    "light_theme_main_color": 2,
    "light_theme_other_colors": [
      3
    ],
    "model_custom_emoji_id": "test",
    "symbol_custom_emoji_id": "test"
  },
  "guard_bot": {
    "first_name": "Guard",
    "id": 1,
    "is_bot": true
  }
}
