src/types/tests/snapshots/tgbot__types__tests__chat__chat_full_info_channel.snap
---
source: src/types/tests/chat.rs
expression: expected_struct.clone()
---
{
  "id": 1,
  "type": "channel",
  "accent_color_id": 0,
  "max_reaction_count": 0
}
